--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign and Laser</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="style.css" rel="stylesheet">
   <style>
     .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.6s ease-out; }
     .fade-in.in-view { opacity: 1; transform: translateY(0); }
