--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Header -->
 <header class="flex justify-between items-center p-4 bg-white shadow fixed w-full top-0 z-50">
   <div class="flex items-center space-x-3">
-    <img src="ChatGPT Image Apr 9, 2025, 02_14_47 PM.png" alt="Logo" class="h-20 w-auto">
+    <img src="logo.png" alt="Logo" class="h-20 w-auto">
     <div class="text-2xl font-bold text-slate-800">Sign & Laser</div>
   </div>
 
