--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@
     <div>
       <h4 class="font-bold text-lg mb-2">Accepted Payment Methods</h4>
       <div class="flex space-x-6 items-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" class="h-10" alt="Visa">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" class="h-10" alt="Mastercard">
-        <img src="C:\Users\faiza\Downloads\UPI-Logo-vector.svg.webp" class="h-10" alt="UPI">
-        <img src="C:\Users\faiza\Downloads\cash-on-delivery-icon-1024x345-7sgjf338.png" class="h-10" alt="Cash on Delivery">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" class="h-6" alt="Visa">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" class="h-7" alt="Mastercard">
+        <img src="upi.png" class="h-6" alt="UPI">
+        <img src="cod.png" class="h-6" alt="Cash on Delivery">
       </div>
     </div>
     <div>
       <h4 class="font-bold text-lg mb-2">Other Services</h4>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" class="h-8" alt="Amazon Service">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" class="h-7" alt="Amazon Service">
     </div>
     <div>
       <h4 class="font-bold text-lg mb-2">Other Support</h4>
