--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- Product 1 -->
     <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-      <img src="https://via.placeholder.com/300x200.png?text=Product+1" alt="Product 1" class="w-full h-48 object-cover rounded-md mb-4" />
+      <img src="1 (2).jpeg" alt="Product 1" class="w-full h-48 object-cover rounded-md mb-4" />
       <h3 class="text-xl font-bold mb-2">Wooden Wall Art</h3>
       <p class="text-gray-700 mb-4">Elegant laser-cut wall art to elevate your interiors.</p>
       <p class="text-lg font-semibold text-blue-600">₹899</p>
@@ -88,7 +88,7 @@
 
     <!-- Product 2 -->
     <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-      <img src="https://via.placeholder.com/300x200.png?text=Product+2" alt="Product 2" class="w-full h-48 object-cover rounded-md mb-4" />
+      <img src="2 (2).jpeg" alt="Product 2" class="w-full h-48 object-cover rounded-md mb-4" />
       <h3 class="text-xl font-bold mb-2">Custom Nameplate</h3>
       <p class="text-gray-700 mb-4">Personalized nameplates perfect for homes or offices.</p>
       <p class="text-lg font-semibold text-blue-600">₹499</p>
@@ -105,7 +105,7 @@
 
     <!-- Product 3 -->
     <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-      <img src="https://via.placeholder.com/300x200.png?text=Product+3" alt="Product 3" class="w-full h-48 object-cover rounded-md mb-4" />
+      <img src="3.jpeg" alt="Product 3" class="w-full h-48 object-cover rounded-md mb-4" />
       <h3 class="text-xl font-bold mb-2">Wooden Coasters (Set of 4)</h3>
       <p class="text-gray-700 mb-4">Stylish and durable laser-engraved wooden coasters.</p>
       <p class="text-lg font-semibold text-blue-600">₹299</p>
@@ -122,7 +122,7 @@
 
     <!-- Product 4 -->
 <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-  <img src="https://via.placeholder.com/300x200.png?text=Tree+Wall+Art" alt="Tree Wall Art" class="w-full h-48 object-cover rounded-md mb-4" />
+  <img src="4.jpeg" alt="Tree Wall Art" class="w-full h-48 object-cover rounded-md mb-4" />
   <h3 class="text-xl font-bold mb-2">Tree of Life Wall Art</h3>
   <p class="text-gray-700 mb-4">Symbolic tree design crafted with precision in wood.</p>
   <p class="text-lg font-semibold text-blue-600">₹1,299</p>
@@ -139,7 +139,7 @@
 
 <!-- Product 5 -->
 <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-  <img src="https://via.placeholder.com/300x200.png?text=Wood+Tree+Panel" alt="Wood Tree Panel" class="w-full h-48 object-cover rounded-md mb-4" />
+  <img src="5.jpeg" alt="Wood Tree Panel" class="w-full h-48 object-cover rounded-md mb-4" />
   <h3 class="text-xl font-bold mb-2">Laser Tree Panel</h3>
   <p class="text-gray-700 mb-4">Decorative wooden panel featuring an intricate tree silhouette.</p>
   <p class="text-lg font-semibold text-blue-600">₹749</p>
@@ -156,7 +156,7 @@
 
 <!-- Product 6 -->
 <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-  <img src="https://via.placeholder.com/300x200.png?text=Minimal+Tree+Design" alt="Minimal Tree Design" class="w-full h-48 object-cover rounded-md mb-4" />
+  <img src="6.jpeg" alt="Minimal Tree Design" class="w-full h-48 object-cover rounded-md mb-4" />
   <h3 class="text-xl font-bold mb-2">Minimal Tree Décor</h3>
   <p class="text-gray-700 mb-4">A simple and clean laser-cut tree perfect for modern spaces.</p>
   <p class="text-lg font-semibold text-blue-600">₹599</p>
@@ -173,7 +173,7 @@
 
 <!-- Product 7 -->
 <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-  <img src="https://via.placeholder.com/300x200.png?text=Tree+Name+Plate" alt="Tree Name Plate" class="w-full h-48 object-cover rounded-md mb-4" />
+  <img src="7.jpeg" alt="Tree Name Plate" class="w-full h-48 object-cover rounded-md mb-4" />
   <h3 class="text-xl font-bold mb-2">Tree Engraved Name Plate</h3>
   <p class="text-gray-700 mb-4">A personalized name plate featuring a beautiful tree motif.</p>
   <p class="text-lg font-semibold text-blue-600">₹649</p>
@@ -190,7 +190,7 @@
 
 <!-- Product 8 -->
 <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-  <img src="https://via.placeholder.com/300x200.png?text=Hanging+Tree+Art" alt="Hanging Tree Art" class="w-full h-48 object-cover rounded-md mb-4" />
+  <img src="8.jpeg" alt="Hanging Tree Art" class="w-full h-48 object-cover rounded-md mb-4" />
   <h3 class="text-xl font-bold mb-2">Hanging Tree Artwork</h3>
   <p class="text-gray-700 mb-4">Wall hanging laser-cut tree art to bring nature indoors.</p>
   <p class="text-lg font-semibold text-blue-600">₹899</p>
@@ -207,7 +207,7 @@
 
 <!-- Product 9 -->
 <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
-  <img src="https://via.placeholder.com/300x200.png?text=Family+Tree+Frame" alt="Family Tree Frame" class="w-full h-48 object-cover rounded-md mb-4" />
+  <img src="WhatsApp Image 2025-04-11 at 3.29.59 PM.jpeg" alt="Family Tree Frame" class="w-full h-48 object-cover rounded-md mb-4" />
   <h3 class="text-xl font-bold mb-2">Family Tree Photo Frame</h3>
   <p class="text-gray-700 mb-4">Display cherished memories with this elegant family tree frame.</p>
   <p class="text-lg font-semibold text-blue-600">₹1,199</p>
