--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Header -->
 <header class="flex justify-between items-center p-4 bg-white shadow fixed w-full top-0 z-50">
   <div class="flex items-center space-x-3">
-    <img src="C:\Users\faiza\Downloads\ChatGPT Image Apr 9, 2025, 02_14_47 PM.png" class="h-20 w-auto">
+    <img src="logo.png" class="h-20 w-auto">
     <div class="text-2xl font-bold text-slate-800">Sign & Laser</div>
   </div>
   <button onclick="document.getElementById('loginModal').classList.remove('hidden')" class="text-sm bg-yellow-500 hover:bg-yellow-600 text-black px-4 py-2 rounded-full">Login / Register</button>
