--- a/index.html
+++ b/index.html
@@ -15,10 +15,25 @@
 <!-- Header -->
 <header class="flex justify-between items-center p-4 bg-white shadow fixed w-full top-0 z-50">
   <div class="flex items-center space-x-3">
-    <img src="logo.png" class="h-20 w-auto">
+    <img src="logo.png" alt="Logo" class="h-20 w-auto">
     <div class="text-2xl font-bold text-slate-800">Sign & Laser</div>
   </div>
-  <button onclick="document.getElementById('loginModal').classList.remove('hidden')" class="text-sm bg-yellow-500 hover:bg-yellow-600 text-black px-4 py-2 rounded-full">Login / Register</button>
+
+  <!-- People Icon Button -->
+  <button onclick="document.getElementById('loginModal').classList.remove('hidden')"
+          class="bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full transition shadow-md">
+    <!-- People Login Icon (SVG) -->
+    <svg xmlns="http://www.w3.org/2000/svg"
+         class="h-5 w-5 text-white"
+         fill="none"
+         viewBox="0 0 24 24"
+         stroke="currentColor">
+      <path stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M5.121 17.804A8.962 8.962 0 0112 15c2.486 0 4.737.992 6.379 2.604M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+    </svg>
+  </button>
 </header>
 
 <!-- Hero -->
