--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     } else if (option === 'Order via Website') {
       window.location.href = 'payment.html';
     } else if (option === 'Buy on Amazon') {
-      window.open('https://www.amazon.in/s?k=sign+and+laser', '_blank');
+      window.open('https://www.amazon.in/l/27943762031?ie=UTF8&marketplaceID=A21TJRUUN4KGV&product=B0DZHQM69V&me=A1NG6BW0OIFJKU', '_blank');
     }
   }
   const faders = document.querySelectorAll('.fade-in');
