--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
       window.open('https://wa.me/918281257256?text=Hi%2C%20I%27m%20interested%20in%20a%20product%20from%20Sign%20and%20Laser!', '_blank');
     } else if (option === 'Order via Website') {
       window.location.href = 'payment.html';
-    } else if (option === 'Buy on Amazon') {
-      window.open('https://www.amazon.in/l/27943762031?ie=UTF8&marketplaceID=A21TJRUUN4KGV&product=B0DZHQM69V&me=A1NG6BW0OIFJKU', '_blank');
+    }else if (selected === "Buy on Amazon") {
+      window.open("https://www.amazon.in/storefront?me=A1NG6BW0OIFJKU&ref_=ssf_share", "_blank");
     }
   }
   const faders = document.querySelectorAll('.fade-in');
