--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="text-2xl font-bold text-slate-800">Sign & Laser</div>
   </div>
 
-  <!-- People Icon Button -->
-  <button onclick="document.getElementById('loginModal').classList.remove('hidden')"
-          class="bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full transition shadow-md">
+  <!-- People Icon Button (Login Button) -->
+  <button onclick="window.location.href='login.html'"
+          class="bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full transition shadow-md flex items-center justify-center">
     <!-- People Login Icon (SVG) -->
     <svg xmlns="http://www.w3.org/2000/svg"
          class="h-5 w-5 text-white"
