--- a/add.html
+++ b/add.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="output.css">
     <style>
         .hidden {
             display: none;
