--- a/add.html
+++ b/add.html
@@ -11,49 +11,85 @@
         }
     </style>
 </head>
-<body class="bg-gray-100">
-    <div class="max-w-4xl mx-auto mt-10 p-8 bg-white shadow-lg rounded-lg">
-        <h1 class="text-3xl font-bold text-center">Add Product</h1>
-        <div id="errorMessage" class="hidden text-red-500 text-center my-2"></div>
+<body class="bg-gradient-to-r from-indigo-100 via-purple-100 to-pink-100 font-sans">
+
+    <!-- Main Container -->
+    <div class="max-w-4xl mx-auto mt-10 p-8 bg-white shadow-xl rounded-2xl transform hover:scale-105 transition duration-300">
+        <h1 class="text-5xl font-bold text-center text-gray-800 mb-10 tracking-wide">Add a New Product</h1>
+
+        <!-- Error Message -->
+        <div id="errorMessage" class="hidden text-red-500 text-center mb-4"></div>
+
+        <!-- Product Form -->
         <form id="productForm">
-            <label for="name" class="block mt-4">Product Name</label>
-            <input type="text" id="name" class="w-full p-2 border rounded mt-2" required>
+            <!-- Product Name -->
+            <div class="mb-6">
+                <label for="name" class="block text-lg font-medium text-gray-700">Product Name</label>
+                <input type="text" id="name" class="w-full p-4 mt-2 border-2 border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" placeholder="Enter product name" required>
+            </div>
 
-            <label for="price" class="block mt-4">Price</label>
-            <input type="text" id="price" class="w-full p-2 border rounded mt-2" required>
+            <!-- Price -->
+            <div class="mb-6">
+                <label for="price" class="block text-lg font-medium text-gray-700">Price</label>
+                <input type="text" id="price" class="w-full p-4 mt-2 border-2 border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" placeholder="Enter price" required>
+            </div>
 
-            <label for="description" class="block mt-4">Description</label>
-            <textarea id="description" class="w-full p-2 border rounded mt-2" required></textarea>
+            <!-- Description -->
+            <div class="mb-6">
+                <label for="description" class="block text-lg font-medium text-gray-700">Description</label>
+                <textarea id="description" class="w-full p-4 mt-2 border-2 border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" placeholder="Enter product description" required></textarea>
+            </div>
 
-            <label for="stockStatus" class="block mt-4">Stock Status</label>
-            <select id="stockStatus" class="w-full p-2 border rounded mt-2">
-                <option value="In Stock">In Stock</option>
-                <option value="Out of Stock">Out of Stock</option>
-            </select>
+            <!-- Stock Status -->
+            <div class="mb-6">
+                <label for="stockStatus" class="block text-lg font-medium text-gray-700">Stock Status</label>
+                <select id="stockStatus" class="w-full p-4 mt-2 border-2 border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300">
+                    <option value="In Stock">In Stock</option>
+                    <option value="Out of Stock">Out of Stock</option>
+                </select>
+            </div>
 
-            <label for="image" class="block mt-4">Product Image</label>
-            <input type="file" id="image" class="w-full p-2 border rounded mt-2" accept="image/*" required>
+            <!-- Quantity Left -->
+            <div class="mb-6">
+                <label for="quantity" class="block text-lg font-medium text-gray-700">Quantity Left</label>
+                <input type="number" id="quantity" class="w-full p-4 mt-2 border-2 border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" placeholder="Enter quantity left" required>
+            </div>
 
-            <button type="submit" class="w-full bg-blue-500 text-white p-2 rounded mt-4">Add Product</button>
+            <!-- Product Image -->
+            <div class="mb-6">
+                <label for="image" class="block text-lg font-medium text-gray-700">Product Image</label>
+                <input type="file" id="image" class="w-full p-4 mt-2 border-2 border-gray-300 rounded-xl shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-300" accept="image/*" required>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="mt-8">
+                <button type="submit" class="w-full bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 text-white p-4 rounded-xl hover:from-indigo-700 hover:to-pink-700 focus:outline-none focus:ring-4 focus:ring-blue-500 transition duration-300">
+                    Add Product
+                </button>
+            </div>
         </form>
     </div>
 
+    <!-- JavaScript to handle form submission -->
     <script>
         const form = document.getElementById('productForm');
         const errorMessage = document.getElementById('errorMessage');
         const password = prompt("Enter the admin password:");
 
+        // Password verification
         if (password !== 'signandlaser') {
-            document.body.innerHTML = '<h1 class="text-red-500 text-center">Access Denied</h1>';
+            document.body.innerHTML = '<h1 class="text-red-500 text-center text-4xl">Access Denied</h1>';
         }
 
         form.onsubmit = async function(e) {
             e.preventDefault();
+
             const formData = new FormData();
             formData.append('name', document.getElementById('name').value);
             formData.append('price', document.getElementById('price').value);
             formData.append('description', document.getElementById('description').value);
             formData.append('stockStatus', document.getElementById('stockStatus').value);
+            formData.append('quantity', document.getElementById('quantity').value);  // New quantity field
             formData.append('image', document.getElementById('image').files[0]);
 
             const response = await fetch('https://script.google.com/macros/s/AKfycbyeYXmzZgkiyN8kjhskqGqmsAwlpWwbAxvuNlJIFgs1_QUHTLmeTs8q7fbxSsMahdKd/exec', {
