--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign and Laser</title>
   <link href="style.css" rel="stylesheet">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <style>
     .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.6s ease-out; }
     .fade-in.in-view { opacity: 1; transform: translateY(0); }
@@ -63,7 +64,8 @@
 <section id="products" class="py-16 px-6 bg-white">
   <h2 class="text-3xl font-semibold text-center mb-12 fade-in">Our Creations</h2>
   <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-
+    <!-- Google Sign-In Button -->
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
     <!-- Product 1 -->
     <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
       <img src="https://via.placeholder.com/300x200.png?text=Product+1" alt="Product 1" class="w-full h-48 object-cover rounded-md mb-4" />
