--- a/index.html
+++ b/index.html
@@ -5,61 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign and Laser</title>
   <link href="style.css" rel="stylesheet"> <style>
-    /* Added a basic style.css link above for clarity, using CDN for Tailwind here */
     .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.6s ease-out; }
     .fade-in.in-view { opacity: 1; transform: translateY(0); }
+    .mobile-menu {
+      transform-origin: top;
+      transform: scaleY(0);
+      transition: transform 0.3s ease, opacity 0.3s ease;
+      opacity: 0;
+    }
+    .mobile-menu.open {
+      transform: scaleY(1);
+      opacity: 1;
+    }
   </style>
 </head>
-<body class="bg-gray-100 text-gray-900 font-sans pt-24"> <header class="flex justify-between items-center p-4 bg-white shadow fixed w-full top-0 z-50">
-  <div class="flex items-center space-x-3">
-    <img src="logo.png" alt="Logo" class="h-20 w-auto"> <div class="text-2xl font-bold text-slate-800">Sign & Laser</div>
-  </div>
 
-  <div class="flex items-center space-x-6"> <nav class="flex space-x-6 text-sm font-semibold text-gray-700">
-      <a href="#" class="hover:text-yellow-500">Home</a>
-      <a href="#" class="hover:text-yellow-500">Categories</a>
-      <a href="#" class="hover:text-yellow-500">My Account</a>
-      <a href="support.html" class="hover:text-yellow-500">Support</a>
-    </nav>
+<body class="bg-gray-100 text-gray-900 font-sans pt-24">
 
-    <button onclick="window.location.href='login.html'"
-            class="bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full transition shadow-md flex items-center justify-center">
-      <svg xmlns="http://www.w3.org/2000/svg"
-           class="h-5 w-5 text-white"
-           fill="none"
-           viewBox="0 0 24 24"
-           stroke="currentColor">
-        <path stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M5.121 17.804A8.962 8.962 0 0112 15c2.486 0 4.737.992 6.379 2.604M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-      </svg>
-    </button>
-  </div>
-</header>
-
-<!-- Hero -->
-<section class="min-h-[80vh] flex flex-col justify-center items-center text-center bg-gradient-to-br from-slate-900 via-slate-800 to-slate-700 text-white p-8">
-  <h1 class="text-5xl md:text-6xl font-bold fade-in">Sign and Laser</h1>
-  <p class="mt-4 text-lg md:text-xl fade-in" style="transition-delay: 0.2s;">CNC-crafted art, décor, and utility products</p>
-  <a href="#products" class="mt-8 bg-yellow-500 hover:bg-yellow-600 text-black font-semibold px-6 py-3 rounded-full transition fade-in" style="transition-delay: 0.4s;">View Products</a>
-</section>
-
-<!-- Search and Tabs -->
-<div class="w-full flex flex-col items-center px-4 mb-8">
-  <div class="relative w-full max-w-md mt-6 mb-4">
-    <input type="text" placeholder="Search products..." class="w-full pl-12 pr-4 py-3 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-yellow-400" />
-    <div class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-500">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-4.35-4.35M16.65 16.65A7.5 7.5 0 1010.5 18a7.5 7.5 0 006.15-3.35z" /></svg>
+  <!-- Header Section -->
+  <header class="flex justify-between items-center p-4 bg-white shadow fixed w-full top-0 z-50">
+    <div class="flex items-center space-x-3">
+      <img src="logo.png" alt="Logo" class="h-20 w-auto">
+      <div class="text-2xl font-bold text-slate-800">Sign & Laser</div>
     </div>
-  </div>
+    <div class="flex items-center space-x-6">
+      <nav class="flex space-x-12 text-sm font-semibold text-gray-700">
+        <div class="hidden md:flex">
+          <a href="#" onclick="location.reload();" class="hover:text-yellow-500">Home</a>
+          <a href="#" class="hover:text-yellow-500">Categories</a>
+          <a href="support.html" class="hover:text-yellow-500">Support</a>
+        </div>
+
+        <!-- Mobile Menu Toggle -->
+     <!-- Updated mobile menu container -->
+<div class="md:hidden relative">
+  <button id="menu-btn" class="p-2 rounded-full hover:bg-gray-100">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+    </svg>
+  </button>
+  <div id="mobile-menu" class="mobile-menu absolute top-14 right-0 w-60 py-4 px-4 rounded-2xl shadow-2xl backdrop-blur-md bg-white/90 z-50 text-center space-y-2 scale-y-0 opacity-0 pointer-events-none transition-all duration-300 origin-top">
+    <a href="#" onclick="location.reload();" class="block py-2 text-gray-800 font-semibold rounded-lg hover:bg-gray-100">Home</a>
+    <a href="#categories" class="block py-2 text-gray-800 font-semibold rounded-lg hover:bg-gray-100">Categories</a>
+    <a href="support.html" class="block py-2 text-gray-800 font-semibold rounded-lg hover:bg-gray-100">Support</a>
   </div>
 </div>
 
-<!-- Products -->
-<section id="products" class="py-16 px-6 bg-white">
-  <h2 class="text-3xl font-semibold text-center mb-12 fade-in">Our Creations</h2>
-  <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+      </nav>
+      <button onclick="window.location.href='login.html'" class="bg-yellow-500 hover:bg-yellow-600 p-2 rounded-full transition shadow-md flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A8.962 8.962 0 0112 15c2.486 0 4.737.992 6.379 2.604M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+        </svg>
+      </button>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="min-h-[80vh] flex flex-col justify-center items-center text-center bg-gradient-to-br from-slate-900 via-slate-800 to-slate-700 text-white p-8">
+    <h1 class="text-5xl md:text-6xl font-bold fade-in">Sign and Laser</h1>
+    <p class="mt-4 text-lg md:text-xl fade-in" style="transition-delay: 0.2s;">CNC-crafted art, décor, and utility products</p>
+    <a href="#products" class="mt-8 bg-yellow-500 hover:bg-yellow-600 text-black font-semibold px-6 py-3 rounded-full transition fade-in" style="transition-delay: 0.4s;">View Products</a>
+  </section>
+
+  <!-- Search Section -->
+  <div class="w-full flex flex-col items-center px-4 mb-8">
+    <div class="relative w-full max-w-md mt-6 mb-4">
+      <input type="text" placeholder="Search products..." class="w-full pl-12 pr-4 py-3 rounded-full border border-gray-300 shadow-sm focus:outline-none focus:ring-2 focus:ring-yellow-400" />
+      <div class="absolute left-4 top-1/2 transform -translate-y-1/2 text-gray-500">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-4.35-4.35M16.65 16.65A7.5 7.5 0 1010.5 18a7.5 7.5 0 006.15-3.35z" /></svg>
+      </div>
+    </div>
+  </div>
+
+  <!-- Products Section -->
+  <section id="products" class="py-16 px-6 bg-white">
+    <h2 class="text-3xl font-semibold text-center mb-12 fade-in">Our Creations</h2>
+    <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
 
     <!-- Product 1 -->
     <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105">
