--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign and Laser</title>
   <link href="style.css" rel="stylesheet"> <style>
+    <style>
     .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.6s ease-out; }
     .fade-in.in-view { opacity: 1; transform: translateY(0); }
     .mobile-menu {
