--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -14,7 +14,7 @@
       const formData = new FormData();
       formData.append("image", file);
 
-      const res = await fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec/exec", {
+      const res = await fetch("https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec/exec", {
         method: "POST",
         body: formData,
       });
