--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -18,7 +18,7 @@
       const result = await response.json();
       if (result.success) {
         localStorage.setItem("admin_logged", "yes");
-        window.location.href = "dashboard.html";
+        window.location.href = "admin-dashboard.html";
       } else {
         alert("Invalid credentials.");
       }
