--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -14,11 +14,21 @@
   return new Promise((resolve, reject) => {
     const reader = new FileReader();
     reader.onload = async () => {
-      const base64Data = reader.result.split(",")[1];
+      const base64 = reader.result.split(",")[1];
+      const name = file.name;
 
-      const url = `https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec?action=uploadImage&data=${encodeURIComponent(base64Data)}&name=${encodeURIComponent(file.name)}`;
+      const response = await fetch("https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          action: "uploadBase64",
+          name: name,
+          data: base64
+        }),
+      });
 
-      const response = await fetch(url);
       const result = await response.json();
       resolve(result.imageUrl);
     };
