--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -17,14 +17,17 @@
       const base64 = encodeURIComponent(reader.result.split(",")[1]);
       const name = encodeURIComponent(file.name);
 
-      const response = await fetch(
-        `https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec?action=uploadBase64&name=${name}&data=${base64}`
-      );
-
-      const result = await response.json();
-      resolve(result.imageUrl);
+      try {
+        const res = await fetch(
+          `https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec?action=uploadBase64&name=${name}&data=${base64}`
+        );
+        const result = await res.json();
+        resolve(result.imageUrl);
+      } catch (err) {
+        console.error("Image upload failed:", err);
+        reject(err);
+      }
     };
-
     reader.onerror = reject;
     reader.readAsDataURL(file);
   });
