--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -9,8 +9,32 @@
         window.location.href = "login.html";
       }
     };
+    
+    function resizeImage(file, maxSizeKB = 150) {
+    return new Promise((resolve, reject) => {
+      const img = new Image();
+      const reader = new FileReader();
+      reader.onload = () => {
+        img.src = reader.result;
+      };
+      img.onload = () => {
+        const canvas = document.createElement('canvas');
+        const scale = Math.sqrt((maxSizeKB * 1024) / (file.size || 1));
+        canvas.width = img.width * scale;
+        canvas.height = img.height * scale;
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        canvas.toBlob(blob => {
+          resolve(blob);
+        }, 'image/jpeg', 0.7);
+      };
+      reader.onerror = reject;
+      reader.readAsDataURL(file);
+    });
+  }
 
     async function uploadImage(file) {
+  const compressedBlob = await resizeImage(file); // Resize first
   return new Promise((resolve, reject) => {
     const reader = new FileReader();
     reader.onload = async () => {
@@ -18,18 +42,18 @@
       const name = encodeURIComponent(file.name);
 
       try {
-        const res = await fetch(
-          `https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec?action=uploadBase64&name=${name}&data=${base64}`
+        const response = await fetch(
+          `https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec?action=uploadImage&name=${name}&data=${base64}`
         );
-        const result = await res.json();
+        const result = await response.json();
         resolve(result.imageUrl);
       } catch (err) {
-        console.error("Image upload failed:", err);
+        console.error("Upload failed:", err);
         reject(err);
       }
     };
     reader.onerror = reject;
-    reader.readAsDataURL(file);
+    reader.readAsDataURL(compressedBlob);
   });
 }
     
