--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -34,17 +34,27 @@
   }
 
     async function uploadImage(file) {
-  const compressedBlob = await resizeImage(file); // Resize first
+  const compressedBlob = await resizeImage(file);
+
   return new Promise((resolve, reject) => {
     const reader = new FileReader();
     reader.onload = async () => {
-      const base64 = encodeURIComponent(reader.result.split(",")[1]);
-      const name = encodeURIComponent(file.name);
+      const base64 = reader.result.split(",")[1];
+      const name = file.name;
 
       try {
-        const response = await fetch(
-          `https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec?action=uploadImage&name=${name}&data=${base64}`
-        );
+        const response = await fetch("https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            action: "uploadImage",
+            name: name,
+            data: base64
+          })
+        });
+
         const result = await response.json();
         resolve(result.imageUrl);
       } catch (err) {
