--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
     <button onclick="handleOrder('payment9')" class="w-full bg-yellow-500 hover:bg-yellow-600 text-black px-4 py-2 rounded-full">Order</button>
   </div>
 </div>
+      
+<div id="dynamic-products" class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto mt-12"></div>
 
   </div>
 </section>
@@ -342,6 +344,41 @@
   }
 
   loadProducts();
+</script>
+<script>
+  async function fetchProducts() {
+    const res = await fetch("https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec");
+    const products = await res.json();
+    const container = document.getElementById("dynamic-products");
+
+    products.forEach((p, i) => {
+      const card = `
+        <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105 fade-in">
+          <img src="${p.image}" alt="${p.name}" class="w-full h-48 object-cover rounded-md mb-4" />
+          <h3 class="text-xl font-bold mb-2">${p.name}</h3>
+          <p class="text-gray-700 mb-4">${p.description}</p>
+          <p class="text-lg font-semibold text-blue-600">₹${p.price}</p>
+          <div class="mt-4">
+            <label class="block mb-1">Buying Options:</label>
+            <select id="payment${i}" class="w-full border rounded p-2 mb-3">
+              <option value="${p.whatsapp}">Order via WhatsApp</option>
+              <option value="/payment.html?name=${encodeURIComponent(p.name)}">Order via Website</option>
+              <option value="${p.amazon}">Buy on Amazon</option>
+            </select>
+            <button onclick="handleOrder('payment${i}')" class="w-full bg-yellow-500 hover:bg-yellow-600 text-black px-4 py-2 rounded-full">Order</button>
+          </div>
+        </div>
+      `;
+      container.innerHTML += card;
+    });
+  }
+
+  function handleOrder(selectId) {
+    const link = document.getElementById(selectId).value;
+    window.open(link, "_blank");
+  }
+
+  fetchProducts();
 </script>
 
 </body>
