--- a/index.html
+++ b/index.html
@@ -185,6 +185,15 @@
   loadProducts();
 </script>
 <script>
+	// 🔧 STEP 1 — Add this function to convert Google Drive file links
+  function convertDriveLink(url) {
+    const match = url.match(/\/file\/d\/([a-zA-Z0-9_-]+)\//);
+    if (match) {
+      const fileId = match[1];
+      return `https://drive.google.com/uc?export=view&id=${fileId}`;
+    }
+    return url;
+  }
   async function fetchProducts() {
     const res = await fetch("https://script.google.com/macros/s/AKfycbyx-kEMJzCx6IngTDDWaAwFLMnWobgZBCnVmENqUrGhtDwvlKsdavLwUqpEULnazsiy9g/exec");
     const products = await res.json();
@@ -193,7 +202,7 @@
     products.forEach((p, i) => {
       const card = `
         <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105 fade-in">
-          <img src="${p.image}" alt="${p.name}" class="w-full h-48 object-cover rounded-md mb-4" />
+          <img src="${convertDriveLink(p.image)}" alt="${p.name}" class="w-full h-48 object-cover rounded-md mb-4" />
           <h3 class="text-xl font-bold mb-2">${p.name}</h3>
           <p class="text-gray-700 mb-4">${p.description}</p>
           <p class="text-lg font-semibold text-blue-600">₹${p.price}</p>
