--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
           </div>
         </div>
       `;
+      console.log('Image for product ' + i + ':', convertDriveLink(p.image));    
       container.innerHTML += card;
     });
   }
