--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   fetchProducts();
 </script>
-	<img src="https://drive.google.com/uc?export=view&id=1vVBkTXLo1RUCxokfoMQz3kv7-MeV06gn" style="width: 300px; border: 2px solid red;" alt="Manual Test">
+<img src="https://drive.google.com/uc?export=view&id=1vVBkTXLo1RUCxokfoMQz3kv7-MeV06gn" style="width: 300px; border: 2px solid red;" />	
 
 </body>
 </html>
