--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     products.forEach((p, i) => {
       const card = `
         <div class="bg-gray-50 rounded-2xl shadow-md p-6 transform transition duration-300 hover:scale-105 fade-in">
-          img src="${convertDriveLink(p.image)}" alt="${p.name}" onerror="this.style.border='3px solid red'; this.src='https://via.placeholder.com/300x200?text=Image+Not+Found'; console.error('Image failed:', this.src);" />
+          <img src="${convertDriveLink(p.image)}" alt="${p.name}" onerror="this.style.border='3px solid red'; this.src='https://via.placeholder.com/300x200?text=Image+Not+Found'; console.error('Image failed:', this.src);" />
           <h3 class="text-xl font-bold mb-2">${p.name}</h3>
           <p class="text-gray-700 mb-4">${p.description}</p>
           <p class="text-lg font-semibold text-blue-600">₹${p.price}</p>
@@ -182,7 +182,6 @@
 
   fetchProducts();
 </script>
-<img src="https://drive.google.com/uc?export=view&id=1vVBkTXLo1RUCxokfoMQz3kv7-MeV06gn" style="width: 300px; border: 2px solid red;" />	
 
 </body>
 </html>
